--- a/Static/UploadClassStudentPhotoPage.html
+++ b/Static/UploadClassStudentPhotoPage.html
@@ -28,7 +28,8 @@
     <input type="file" id="myFile" name="filename">
   </p>
   <p>
-    <input type="submit">
+	<form action="ExtractingComparing.html" method="POST" ><p>
+		<input name="submit" type="submit" id="submit" title="submit" value="submit"></p></form>
     <br><br>
   </p>
 </form>
