--- a/Static/CourseSelectionPage.html
+++ b/Static/CourseSelectionPage.html
@@ -47,21 +47,21 @@
                   <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
                   <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
                   <td height="21" align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td height="21" align="center" valign="middle" bgcolor="#FFFFFF"><img src="./images/edit.png" width="39" height="15" alt=""/><img src="./images/delete.png" width="53" height="15" alt=""/></td>
+                  <td height="21" align="center" valign="middle" bgcolor="#FFFFFF"><input type="button" name="View Details" id="View Details" value="View Details"></td>
                 </tr>
                 <tr>
                   <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
                   <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
                   <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
                   <td height="21" align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td height="21" align="center" valign="middle" bgcolor="#FFFFFF"><img src="./images/edit.png" width="39" height="15" alt=""/><img src="./images/delete.png" width="53" height="15" alt=""/></td>
+                  <td height="21" align="center" valign="middle" bgcolor="#FFFFFF"><input type="button" name="View Details2" id="View Details2" value="View Details"></td>
                 </tr>
                 <tr>
                   <td align="center" bgcolor="#FFFFFF" >&nbsp;</td>
                   <td align="center" bgcolor="#FFFFFF" >&nbsp;</td>
                   <td align="center" bgcolor="#FFFFFF" >&nbsp;</td>
                   <td height="21" align="center" bgcolor="#FFFFFF" >&nbsp;</td>
-                  <td height="21" align="center" bgcolor="#FFFFFF" ><img src="./images/edit.png" width="39" height="15" alt=""/><img src="./images/delete.png" width="53" height="15" alt=""/></td>
+                  <td height="21" align="center" bgcolor="#FFFFFF" ><input type="button" name="View Details3" id="View Details3" value="View Details"></td>
                 </tr>
               </tbody>
             </table></td>
