--- a/Static/StudentLoginPage.html
+++ b/Static/StudentLoginPage.html
@@ -14,17 +14,25 @@
     </tr>
   </tbody>
 </table>
-		<p>
+	<p>
 		  <label for="textfield">Student ID</label>
           <input name="Student Number" type="text" required="required" id="Student Number">
 		</p>
-		<p>
+	<p>
 		  <label for="password">Password:</label>
           <input type="password" name="password" id="password">
-		</p>
-		<form action="MyAttendancePage.html" method="POST">
-		<p>
-		  <input type="submit" name="submit" id="submit" value="Submit">
-			</p></form>
+    <a href="ForgotPasswordPage.html">Forgot Password</a></p>
+	<p>
+	  <input name="submit" type="submit" id="submit" formaction="MyAttendancePage.html" value="Submit">
+	</p>
+	<table width="20%" border="0">
+	  <tbody>
+	    <tr>
+	      <th width="67%" height="44" scope="col">Don't have an account?</th>
+	      <th width="33%" align="left" bgcolor="#FFFFFF" scope="col"><a href="StudentSignUpPage.html">Sign up</a></th>
+        </tr>
+      </tbody>
+    </table>
+	<p>&nbsp;</p>
 </body>
 </html>
