--- a/Static/MyAttendancePage.html
+++ b/Static/MyAttendancePage.html
@@ -9,7 +9,7 @@
 <table width="100%" border="0">
   <tbody>
     <tr bgcolor="#751D1F">
-      <th colspan="3" align="left" valign="middle" bgcolor="#06993C" scope="col"><img src="images/Attendance2.png" width="47" height="41" alt=""/><span style="font-size: 24px; color: #FFFFFF;">Attendance&nbsp;</span></th>
+      <th colspan="3" align="left" valign="middle" bgcolor="#06993C" scope="col"><img src="images/Attendance2.png" width="47" height="41" alt=""/><span style="font-size: 24px; color: #FFFFFF;"><span style="font-size: 36px">Attendance</span>&nbsp;</span></th>
     </tr>
     <tr>
       <td width="1%" bgcolor="#06993C">&nbsp;</td>
@@ -37,22 +37,16 @@
         <table width="100%" border="1" cellpadding="0" cellspacing="0">
         <tbody>
           <tr bgcolor="#DEE0DF">
-			  <th width="16%" height="25" bgcolor="#DEE0DF" scope="col">Date</th>
-            <th width="16%" scope="col">Term</th>
-            <th width="16%" scope="col">Course</th>
-            <th width="16%" scope="col">Presence</th>
-            <th width="18%" scope="col">Absence</th>
-            <th width="18%" scope="col">Attendance Rate</th>
+            <th width="10%" bgcolor="#DEE0DF" scope="col">Select</th>
+			  <th width="10%" height="25" bgcolor="#DEE0DF" scope="col">Date</th>
+            <th width="15%" scope="col">Term</th>
+            <th width="25%" scope="col">Course</th>
+            <th width="10%" scope="col">Presence</th>
+            <th width="10%" scope="col">Absence</th>
+            <th width="20%" scope="col">Attendance Rate</th>
             </tr>
           <tr>
-            <th height="25" scope="col">&nbsp;</th>
-            <th scope="col">Notify if the attendance is wrong/Appeal</th>
-            <th scope="col">&nbsp;</th>
-            <th scope="col">&nbsp;</th>
-            <th scope="col">&nbsp;</th>
-            <th scope="col">&nbsp;</th>
-          </tr>
-          <tr>
+            <th scope="col"><input type="checkbox" name="checkbox" id="checkbox"></th>
             <th height="25" scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
@@ -61,6 +55,7 @@
             <th scope="col">&nbsp;</th>
           </tr>
           <tr>
+            <th scope="col"><input type="checkbox" name="checkbox2" id="checkbox2"></th>
             <th height="25" scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
@@ -69,6 +64,7 @@
             <th scope="col">&nbsp;</th>
           </tr>
           <tr>
+            <th scope="col"><input type="checkbox" name="checkbox3" id="checkbox3"></th>
             <th height="25" scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
@@ -77,6 +73,16 @@
             <th scope="col">&nbsp;</th>
           </tr>
           <tr>
+            <th scope="col"><input type="checkbox" name="checkbox4" id="checkbox4"></th>
+            <th height="25" scope="col">&nbsp;</th>
+            <th scope="col">&nbsp;</th>
+            <th scope="col">&nbsp;</th>
+            <th scope="col">&nbsp;</th>
+            <th scope="col">&nbsp;</th>
+            <th scope="col">&nbsp;</th>
+          </tr>
+          <tr>
+            <th scope="col"><input type="checkbox" name="checkbox5" id="checkbox5"></th>
             <th height="25" scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
@@ -89,8 +95,8 @@
       <td width="1%" bgcolor="#06993C">&nbsp;</td>
     </tr>
     <tr bgcolor="#751D1F">
-      <td height="62" colspan="3" align="right" bgcolor="#06993C"><label for="textfield">Exit</label>
-      <a href="StudentLoginPage.html"><img src="images/exit.jpg" width="46" height="41" alt=""/></a></td>
+      <td height="62" colspan="3" align="left" bgcolor="#06993C"><input name="Submit" type="submit" id="Submit" formaction="AppealPage.html" formmethod="POST" title="Appeal" value="Appeal">
+      <input name="Logout" type="submit" id="Logout" form="Default" formaction="StudentLoginPage.html" formmethod="POST" formtarget="_parent" title="Logout" value="Logout"></td>
     </tr>
   </tbody>
 </table>
