Add features and made few changes

--- a/Static/AdminLoginPage.html
+++ b/Static/AdminLoginPage.html
@@ -42,7 +42,7 @@
                   </tr>
                 </tbody>
               </table>                <h1>
-				  <form action="RollCallPage.html" method="POST"><p>
+				  <form action="RollCall.html" method="POST"><p>
                 <input name="submit" type="submit" id="submit" formmethod="POST" value="Submit" align="center">
 				</p></form>
               </h1></th>
