--- a/Static/ExtractingPage.html
+++ b/Static/ExtractingPage.html
@@ -22,7 +22,7 @@
             <td width="134" align="center" bgcolor="#DEE0DF">Student Photo</td>
           </tr>
           <tr>
-            <td height="44" align="center">&nbsp;<a href="Student Record.html">2020A001</a></td>
+            <td height="44" align="center">&nbsp;2020A001</td>
             <td align="center">&nbsp;Willem Baxter</td>
             <td align="center"><img src="images/Willem Baxter.jpg" width="52" height="41" alt=""/></td>
             </tr>
@@ -32,7 +32,7 @@
             <td align="center"><img src="images/Samantha Chu.jpg" width="52" height="41" alt=""/></td>
             </tr>
           <tr>
-            <td align="center">Date</td>
+            <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             </tr>
