--- a/Static/MyAttendancePage.html
+++ b/Static/MyAttendancePage.html
@@ -95,10 +95,11 @@
       <td width="1%" bgcolor="#06993C">&nbsp;</td>
     </tr>
     <tr bgcolor="#751D1F">
-      <td height="62" colspan="3" align="left" bgcolor="#06993C"><input name="Submit" type="submit" id="Submit" formaction="AppealPage.html" formmethod="POST" title="Appeal" value="Appeal">
-      <input name="Logout" type="submit" id="Logout" form="Default" formaction="StudentLoginPage.html" formmethod="POST" formtarget="_parent" title="Logout" value="Logout"></td>
-    </tr>
+    <td height="40" colspan="3" align="left" bgcolor="#06993C"><a href="AppealPage.html" target="myframe">
+      <input type="button" name="Appeal" id="submit" value="Appeal">
+      <input name="Logout" type="submit" id="Logout" formaction="StudentLoginPage.html" formmethod="POST" title="Logout" value="Logout">    </tr>
   </tbody>
 </table>
+<p><iframe frameborder="0" height="500" width="100%" name="myframe">&nbsp;</p>
 </body>
 </html>
