--- a/Static/StudentLoginPage.html
+++ b/Static/StudentLoginPage.html
@@ -22,9 +22,9 @@
 		  <label for="password">Password:</label>
           <input type="password" name="password" id="password">
     <a href="ForgotPasswordPage.html">Forgot Password</a></p>
-	<p>
-	  <input name="submit" type="submit" id="submit" formaction="MyAttendancePage.html" value="Submit">
-	</p>
+		<form action="MyAttendancePage.html" method="POST"><p>
+                <input name="submit" type="submit" id="submit" formmethod="POST" value="Submit" align="center">
+				</p></form>
 	<table width="20%" border="0">
 	  <tbody>
 	    <tr>
