--- a/Static/ComparingPage.html
+++ b/Static/ComparingPage.html
@@ -24,7 +24,7 @@
             <td width="134" align="center" bgcolor="#DEE0DF">Attendance</td>
           </tr>
           <tr>
-            <td height="44" align="center">&nbsp;<a href="Student Record.html">2020A001</a></td>
+            <td height="44" align="center">&nbsp;2020A001</td>
             <td align="center">&nbsp;Willem Baxter</td>
             <td align="center"><img src="images/Willem Baxter.jpg" width="52" height="41" alt=""/></td>
             <td align="center">50%</td>
@@ -38,7 +38,7 @@
             <td align="center"><img src="images/checkmarck.jpg" width="25" height="24" alt=""/></td>
             </tr>
           <tr>
-            <td align="center">Date</td>
+            <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
