--- a/Static/ExtractingComparing.html
+++ b/Static/ExtractingComparing.html
@@ -13,7 +13,7 @@
 <table width="100%" border="0">
   <tbody>
     <tr>
-      <th height="74" colspan="2" align="left" bgcolor="#228744" scope="col" border="0" cellpadding="0" cellspacing="0"><p><img src="images/Extracting.png" width="65" height="60" alt=""/><span style="font-size: 24px; color: #FFFFFF">Extrcating &amp; Comparing</span></p></th>
+      <th height="74" colspan="2" align="left" bgcolor="#228744" scope="col" border="0" cellpadding="0" cellspacing="0"><p><img src="images/Extracting.png" width="65" height="60" alt=""/><span style="font-size: 24px; color: #FFFFFF">Extracting &amp; Comparing</span></p></th>
     </tr>
     <tr>
       <th width="50%" height="18" align="center" bgcolor="#228744" scope="col" border="0" cellpadding="0" cellspacing="0">Extraction</th>
