--- a/Static/RollCallPage.html
+++ b/Static/RollCallPage.html
@@ -65,7 +65,7 @@
             <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
           </tr>
           <tr>
-            <td align="center">Date</td>
+            <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
