--- a/Static/CourseSelectionPage.html
+++ b/Static/CourseSelectionPage.html
@@ -36,32 +36,38 @@
               <tbody>
                 <tr></tr>
                 <tr>
-                  <td width="20%" height="21" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Term</strong></td>
-                  <td width="20%" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Course&nbsp;&nbsp;</strong></td>
-                  <td width="20%" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Course&nbsp;Start Date</strong></td>
-                  <td width="20%" height="21" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Course End Date&nbsp;&nbsp;</strong></td>
-                  <td width="20%" height="21" align="center" bgcolor="#DEE0DF" ><strong>&nbsp;Management</strong>&nbsp;</td>
+                  <td width="15%" height="21" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Term</strong></td>
+                  <td width="30%" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Course&nbsp;&nbsp;</strong></td>
+                  <td width="13%" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Course&nbsp;Start Date</strong></td>
+                  <td width="13%" height="21" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Course End Date&nbsp;&nbsp;</strong></td>
+                  <td width="24%" height="21" align="center" bgcolor="#DEE0DF" ><strong>&nbsp;Management</strong>&nbsp;</td>
                 </tr>
                 <tr>
                   <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
                   <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
                   <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
                   <td height="21" align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td height="21" align="center" valign="middle" bgcolor="#FFFFFF"><a href="BasicStudentInformation.html" target="myframe"><input type="button" name="View Details" id="View Details" value="View Details"></td>
+                  <td height="21" align="center" valign="middle" bgcolor="#FFFFFF"><a href="ClassDetailsPage.html" target="myframe"><input type="button" name="View Details" id="View Details" value="Class Details">
+                    <a href="BasicStudentInformation.html" target="myframe">
+                    <input type="button" name="View Details4" id="View Details4" value="Student Details"> <a href="History.html" target="myframe"> <input type="button" name="View Details5" id="View Details7" value="Attendance Details"></td>
                 </tr>
                 <tr>
                   <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
                   <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
                   <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
                   <td height="21" align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td height="21" align="center" valign="middle" bgcolor="#FFFFFF"><a href="BasicStudentInformation.html" target="myframe"><input type="button" name="View Details2" id="View Details2" value="View Details"></td>
+                  <td height="21" align="center" valign="middle" bgcolor="#FFFFFF"><a href="ClassDetailsPage.html" target="myframe"><input type="button" name="View Details" id="View Details" value="Class Details">
+                    <a href="BasicStudentInformation.html" target="myframe">
+                    <input type="button" name="View Details4" id="View Details4" value="Student Details"> <a href="History.html" target="myframe"> <input type="button" name="View Details5" id="View Details7" value="Attendance Details"></td>
                 </tr>
                 <tr>
                   <td align="center" bgcolor="#FFFFFF" >&nbsp;</td>
                   <td align="center" bgcolor="#FFFFFF" >&nbsp;</td>
                   <td align="center" bgcolor="#FFFFFF" >&nbsp;</td>
                   <td height="21" align="center" bgcolor="#FFFFFF" >&nbsp;</td>
-                  <td height="21" align="center" bgcolor="#FFFFFF" ><a href="BasicStudentInformation.html" target="myframe"><input type="button" name="View Details3" id="View Details3" value="View Details"></td>
+                  <td height="21" align="center" bgcolor="#FFFFFF" ><a href="ClassDetailsPage.html" target="myframe"><input type="button" name="View Details" id="View Details" value="Class Details">
+                    <a href="BasicStudentInformation.html" target="myframe">
+                    <input type="button" name="View Details4" id="View Details4" value="Student Details"> <a href="History.html" target="myframe"> <input type="button" name="View Details5" id="View Details7" value="Attendance Details"></td>
                 </tr>
               </tbody>
             </table></td>
@@ -75,6 +81,6 @@
     </tr>
   </tbody>
 </table>
-<iframe frameborder="0" height="500" width="100%" name="myframe"></iframe>
+<iframe frameborder="0" height="1000" width="100%" name="myframe"></iframe>
 </body>
 </html>
