--- a/Static/History.html
+++ b/Static/History.html
@@ -6,10 +6,10 @@
 </head>
 
 <body>
-<table width="90%" border="0">
+<table width="100%" border="0">
   <tbody>
     <tr>
-      <th colspan="3" align="left" valign="middle" bgcolor="#228744" scope="col" border="0" cellpadding="0" cellspacing="0"><img src="images/history.jpg" width="58" height="61" alt=""/><span style="font-size: 36px; color: #FAF9F9">History/Statistics</span></th>
+      <th colspan="3" align="left" valign="middle" bgcolor="#228744" scope="col" border="0" cellpadding="0" cellspacing="0"><img src="images/history.jpg" width="58" height="61" alt=""/><span style="font-size: 36px; color: #FAF9F9">Attendance Details</span></th>
     </tr>
     <tr>
       <td width="1%" bgcolor="#228744">&nbsp;</td>
