--- a/Static/UploadClassStudentPhotoPage.html
+++ b/Static/UploadClassStudentPhotoPage.html
@@ -29,7 +29,7 @@
   </p>
   <p>
 	<form action="ExtractingComparing.html" method="POST" ><p>
-		<input name="submit" type="submit" id="submit" title="submit" value="submit"></p></form>
+		<input name="submit" type="submit" id="submit" title="submit" value="Submit"></p></form>
     <br><br>
   </p>
 </form>
