--- a/Static/UploadStudentInformationPage.html
+++ b/Static/UploadStudentInformationPage.html
@@ -14,20 +14,8 @@
     <input type="text" id="id" name="id"> <br>
 	<br>
 	<label for="text2">Student Email:</label></br>
-  <input type="text" id="id2" name="id2">
-  <br>
-	<br>
-	<label for="text2"> Age:</label>
-	</br>
-  <input type="text" id="id2" name="id2">
-  <br>
-<br>
-	<label for="text2"> Phone:</label>
-	</br>
-  <input type="text" id="id2" name="id2">
-  <br>
-  <br>
-  <label for="Term" >Term:</label>
+  <input type="text" id="id2" name="id2"><br><br>
+    <label for="Term" >Term:</label>
   <select name="Term" id="Term">
     <option value="Summer 2020">Summer 2020</option>
     <option>Spring 2020</option>
