--- a/Static/RollCallPage.html
+++ b/Static/RollCallPage.html
@@ -23,12 +23,31 @@
             <th colspan="9" background="../materials/images/backt.jpg" height="25" scope="col"><table width="100%" border="0" cellpadding="0">
               <tbody>
                 <tr>
-                  <th width="49%" height="23" align="left" valign="middle" bgcolor="#ACB0AE" scope="col"><label for="textfield">Student No:</label>
+                  <th width="82%" height="23" align="left" valign="middle" bgcolor="#ACB0AE" scope="col">
+					  					    <label for="Term" >Term:</label>
+        <select name="Term" id="Term">
+          <option value="Summer 2020">Summer 2020</option>
+          <option>Spring 2020</option>
+        </select>
+		  <label for="Term">Course:</label>
+        <select name="Term" id="Term">
+          <option value="INFO 5717">INFO 5717</option>
+          <option value="INFO 5707">INFO 5707</option>
+        </select>
+
+					  <label for="textfield">Student No:</label>
                     <input type="text" name="textfield" id="textfield">
                     <label for="textfield2">Student Name:</label>
                     <input type="text" name="textfield2" id="textfield2">
-                    <input type="button" name="button" id="button" value="RollCall"></th>
-                  <th width="51%" align="right" valign="middle" bgcolor="#ACB0AE" scope="col"><a href="SelectPage.html"><img src="images/Select.PNG" width="36" height="36" alt=""/></a><img src="images/Grey Space.png" width="9" height="30" alt=""/><img src="images/import_1.png" width="36" height="36" alt=""/><img src="images/Grey Space.png" width="9" height="30" alt=""/><img src="images/sign list.jpg" width="36" height="36" alt=""/><img src="images/Grey Space.png" width="9" height="30" alt=""/><a href="History.html"><img src="images/history.jpg" width="36" height="36" alt=""/></a></th>
+                    <input type="button" name="button" id="button" value="RollCall">
+					</th>
+                  <th width="18%" align="right" valign="middle" bgcolor="#ACB0AE" scope="col">
+					  
+					  <a href="SelectPage.html"><img src="./images/Select.PNG" width="36" height="36" alt=""/></a>
+					  <a href="UploadStudentInformationPage.html"><img src="./images/import_1.png" width="36" height="36" alt=""/></a>
+					  <a href="UploadClassStudentPhotoPage.html"><img src="./images/Uploadicon.png" width="36" height="36" alt=""/></a>
+					  <a href="History.html"><img src="./images/history.jpg" width="36" height="36" alt=""/></a>
+					</th>
                 </tr>
               </tbody>
             </table></th>
@@ -52,7 +71,10 @@
             <td align="center">INFO 5707 - Data Modeling for Information Professionals</td>
             <td align="center">Y(100%)</td>
             <td align="center"><img src="images/Willem Baxter.jpg" width="52" height="41" alt=""/></td>
-            <td align="center" valign="middle"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center" valign="middle">
+				<input name="imageField" type="image" id="imageField" src="images/edit.png" width="45"><input name="imageField" type="image" id="imageField" src="images/delete.png" width="60">
+				
+			  </td>
           </tr>
           <tr>
             <td align="center">&nbsp;2020A002</td>
@@ -62,7 +84,10 @@
             <td align="center">INFO 5707 - Data Modeling for Information Professionals</td>
             <td align="center">&nbsp;</td>
             <td align="center"><img src="images/Samantha Chu.jpg" width="52" height="41" alt=""/></td>
-            <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center">
+				<input name="imageField" type="image" id="imageField" src="images/edit.png" width="45"><input name="imageField" type="image" id="imageField" src="images/delete.png" width="60">
+
+			  </td>
           </tr>
           <tr>
             <td align="center">&nbsp;</td>
@@ -72,7 +97,7 @@
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center">&nbsp;</td>
           </tr>
           <tr>
             <td align="center">&nbsp;</td>
@@ -82,7 +107,7 @@
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center">&nbsp;</td>
           </tr>
           <tr>
             <td align="center">&nbsp;</td>
@@ -92,7 +117,7 @@
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center">&nbsp;</td>
           </tr>
           <tr>
             <td align="center">&nbsp;</td>
@@ -102,7 +127,7 @@
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center">&nbsp;</td>
           </tr>
           <tr>
             <td align="center">&nbsp;</td>
@@ -112,7 +137,7 @@
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center">&nbsp;</td>
           </tr>
           <tr>
             <td align="center">&nbsp;</td>
@@ -122,7 +147,7 @@
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center">&nbsp;</td>
           </tr>
           <tr>
             <td align="center">&nbsp;</td>
@@ -132,7 +157,7 @@
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center">&nbsp;</td>
           </tr>
           <tr>
             <td align="center">&nbsp;</td>
@@ -142,7 +167,7 @@
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center">&nbsp;</td>
           </tr>
           <tr>
             <td align="center">&nbsp;</td>
@@ -152,7 +177,7 @@
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center">&nbsp;</td>
           </tr>
           <tr>
             <td align="center">&nbsp;</td>
@@ -162,7 +187,7 @@
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center">&nbsp;</td>
           </tr>
           <tr>
             <td align="center">&nbsp;</td>
@@ -172,7 +197,7 @@
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center">&nbsp;</td>
           </tr>
           <tr>
             <td align="center">&nbsp;</td>
@@ -182,7 +207,7 @@
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center">&nbsp;</td>
           </tr>
           <tr>
             <td align="center">&nbsp;</td>
@@ -192,7 +217,7 @@
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center">&nbsp;</td>
           </tr>
           <tr>
             <td align="center">&nbsp;</td>
@@ -202,7 +227,7 @@
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center">&nbsp;</td>
           </tr>
           <tr>
             <td align="center">&nbsp;</td>
@@ -212,7 +237,7 @@
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center">&nbsp;</td>
           </tr>
           <tr>
             <td align="center">&nbsp;</td>
@@ -222,7 +247,7 @@
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td align="center"><img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td align="center">&nbsp;</td>
           </tr>
         </tbody>
       </table></td>
