Changed icons of edit and delete

--- a/Static/ClassDetailsPage.html
+++ b/Static/ClassDetailsPage.html
@@ -40,16 +40,16 @@
             <td align="center"><input type="date" name="date" id="date"></td>
             <td align="center">&nbsp;</td>
             <td align="center">&nbsp;</td>
-            <td height="21" align="center">&nbsp;
-			  <img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td height="21" align="center"><input type="button" name="button2" id="button2" value="Edit">
+                    <input type="button" name="button3" id="button3" value="Delete"></td>
           </tr>
           <tr>
             <td height="21" align="center">&nbsp;</td>
             <td align="center" ><input type="date" name="date3" id="date3"></td>
             <td align="center" >&nbsp;</td>
             <td align="center" >&nbsp;</td>
-            <td height="21" align="center" >&nbsp;
-			  <img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td height="21" align="center" ><input type="button" name="button2" id="button2" value="Edit">
+                    <input type="button" name="button3" id="button3" value="Delete"></td>
           </tr>
   
         
