--- a/Static/CourseSelectionPage.html
+++ b/Static/CourseSelectionPage.html
@@ -36,38 +36,45 @@
               <tbody>
                 <tr></tr>
                 <tr>
-                  <td width="15%" height="21" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Term</strong></td>
-                  <td width="30%" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Course&nbsp;&nbsp;</strong></td>
-                  <td width="13%" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Course&nbsp;Start Date</strong></td>
-                  <td width="13%" height="21" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Course End Date&nbsp;&nbsp;</strong></td>
-                  <td width="24%" height="21" align="center" bgcolor="#DEE0DF" ><strong>&nbsp;Management</strong>&nbsp;</td>
+                  <td width="10%" height="21" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Term</strong></td>
+                  <td width="25%" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Course&nbsp;&nbsp;</strong></td>
+                  <td width="10%" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Course&nbsp;Start Date</strong></td>
+                  <td width="10%" height="21" align="center" bgcolor="#DEE0DF"><strong>&nbsp;Course End Date&nbsp;&nbsp;</strong></td>
+                  <td width="25%" align="center" bgcolor="#DEE0DF" ><strong>Details</strong></td>
+                  <td width="25%" height="21" align="center" bgcolor="#DEE0DF" ><strong>&nbsp;Management</strong>&nbsp;</td>
+					
                 </tr>
                 <tr>
                   <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
                   <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
                   <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
                   <td height="21" align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td height="21" align="center" valign="middle" bgcolor="#FFFFFF"><a href="ClassDetailsPage.html" target="myframe"><input type="button" name="View Details" id="View Details" value="Class Details">
+                  <td align="center" valign="middle" bgcolor="#FFFFFF"><a href="ClassDetailsPage.html" target="myframe"><input type="button" name="View Details" id="View Details" value="Class Details">
                     <a href="BasicStudentInformation.html" target="myframe">
                     <input type="button" name="View Details4" id="View Details4" value="Student Details"> <a href="History.html" target="myframe"> <input type="button" name="View Details5" id="View Details7" value="Attendance Details"></td>
-                </tr>
+                  <td height="21" align="center" valign="middle" bgcolor="#FFFFFF"><input type="button" name="button2" id="button2" value="Edit">
+                    <input type="button" name="button3" id="button3" value="Delete"></tr>
                 <tr>
                   <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
                   <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
                   <td align="center" bgcolor="#FFFFFF">&nbsp;</td>
                   <td height="21" align="center" bgcolor="#FFFFFF">&nbsp;</td>
-                  <td height="21" align="center" valign="middle" bgcolor="#FFFFFF"><a href="ClassDetailsPage.html" target="myframe"><input type="button" name="View Details" id="View Details" value="Class Details">
+                  <td align="center" valign="middle" bgcolor="#FFFFFF"><a href="ClassDetailsPage.html" target="myframe"><input type="button" name="View Details" id="View Details" value="Class Details">
                     <a href="BasicStudentInformation.html" target="myframe">
                     <input type="button" name="View Details4" id="View Details4" value="Student Details"> <a href="History.html" target="myframe"> <input type="button" name="View Details5" id="View Details7" value="Attendance Details"></td>
+                  <td height="21" align="center" valign="middle" bgcolor="#FFFFFF"><input type="button" name="button2" id="button2" value="Edit">
+                    <input type="button" name="button3" id="button3" value="Delete"></td>
                 </tr>
                 <tr>
                   <td align="center" bgcolor="#FFFFFF" >&nbsp;</td>
                   <td align="center" bgcolor="#FFFFFF" >&nbsp;</td>
                   <td align="center" bgcolor="#FFFFFF" >&nbsp;</td>
                   <td height="21" align="center" bgcolor="#FFFFFF" >&nbsp;</td>
-                  <td height="21" align="center" bgcolor="#FFFFFF" ><a href="ClassDetailsPage.html" target="myframe"><input type="button" name="View Details" id="View Details" value="Class Details">
+                  <td align="center" bgcolor="#FFFFFF" ><a href="ClassDetailsPage.html" target="myframe"><input type="button" name="View Details" id="View Details" value="Class Details">
                     <a href="BasicStudentInformation.html" target="myframe">
                     <input type="button" name="View Details4" id="View Details4" value="Student Details"> <a href="History.html" target="myframe"> <input type="button" name="View Details5" id="View Details7" value="Attendance Details"></td>
+                  <td height="21" align="center" bgcolor="#FFFFFF" ><input type="button" name="button2" id="button2" value="Edit">
+                    <input type="button" name="button3" id="button3" value="Delete"></td>
                 </tr>
               </tbody>
             </table></td>
