--- a/Static/RollCallPage.html
+++ b/Static/RollCallPage.html
@@ -72,7 +72,8 @@
             <td align="center">Y(100%)</td>
             <td align="center"><img src="images/Willem Baxter.jpg" width="52" height="41" alt=""/></td>
             <td align="center" valign="middle">
-				<input name="imageField" type="image" id="imageField" src="images/edit.png" width="45"><input name="imageField" type="image" id="imageField" src="images/delete.png" width="60">
+				<input type="button" name="button2" id="button2" value="Edit">
+                    <input type="button" name="button3" id="button3" value="Delete">
 				
 			  </td>
           </tr>
@@ -85,7 +86,8 @@
             <td align="center">&nbsp;</td>
             <td align="center"><img src="images/Samantha Chu.jpg" width="52" height="41" alt=""/></td>
             <td align="center">
-				<input name="imageField" type="image" id="imageField" src="images/edit.png" width="45"><input name="imageField" type="image" id="imageField" src="images/delete.png" width="60">
+				<input type="button" name="button2" id="button2" value="Edit">
+                    <input type="button" name="button3" id="button3" value="Delete">
 
 			  </td>
           </tr>
