--- a/Static/TermPage.html
+++ b/Static/TermPage.html
@@ -33,13 +33,15 @@
           </tr>
           <tr>
             <td height="21" align="center">Spring 2020</td>
-            <td height="21" align="center">&nbsp;
-			  <img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td height="21" align="center">
+			  <input type="button" name="button2" id="button2" value="Edit">
+                    <input type="button" name="button3" id="button3" value="Delete"></td>
           </tr>
           <tr>
             <td height="21" align="center">Summer 2020</td>
-            <td height="21" align="center" >&nbsp;
-			  <img src="../../../PycharmProjects/rollcall/Static/images/edit.png" width="39" height="15" alt=""/><img src="../../../PycharmProjects/rollcall/Static/images/delete.png" width="53" height="15" alt=""/></td>
+            <td height="21" align="center" >
+			  <input type="button" name="button2" id="button2" value="Edit">
+                    <input type="button" name="button3" id="button3" value="Delete"></td>
           </tr>
   
         
