--- a/Static/CoursePage.html
+++ b/Static/CoursePage.html
@@ -36,17 +36,17 @@
           </tr>
           <tr>
             <td height="21" align="center">INFO 5717 - NetworkedDataModelingandProcessing</td>
-            <td align="center"><input type="date" name="date" id="date"></td>
-            <td align="center"><input type="date" name="date2" id="date2"></td>
+            <td align="center">&nbsp;</td>
+            <td align="center">&nbsp;</td>
             <td height="21" align="center"><input type="button" name="button2" id="button2" value="Edit">
-                    <input type="button" name="button3" id="button3" value="Delete"></td>
+              <input type="button" name="button3" id="button3" value="Delete"></td>
           </tr>
           <tr>
             <td height="21" align="center">INFO 5707 - Data Modeling for Information Professionals</td>
-            <td align="center" ><input type="date" name="date3" id="date3"></td>
-            <td align="center" ><input type="date" name="date4" id="date4"></td>
+            <td align="center" >&nbsp;</td>
+            <td align="center" >&nbsp;</td>
             <td height="21" align="center" ><input type="button" name="button2" id="button2" value="Edit">
-                    <input type="button" name="button3" id="button3" value="Delete"></td>
+              <input type="button" name="button3" id="button3" value="Delete"></td>
           </tr>
   
         
