Last edits for assignment1

--- a/Static/UploadClassStudentPhotoPage.html
+++ b/Static/UploadClassStudentPhotoPage.html
@@ -29,7 +29,9 @@
   </p>
   <p>
 	<form action="ExtractingComparing.html" method="POST" ><p>
-		<input name="submit" type="submit" id="submit" title="submit" value="Submit"></p></form>
+		<input name="submit" type="submit" id="submit" title="submit" value="Submit"></p>
+	  <p><a href="ExtractingComparing.html"><img src="images/img_submit.gif" width="48" height="48" alt=""/></a></p>
+	</form>
     <br><br>
   </p>
 </form>
