--- a/Static/TermPage - Copy.html
+++ b/Static/TermPage - Copy.html
@@ -40,6 +40,11 @@
 			}else
 				alert("The term ".concat(pmt).concat(" was added to the table"))
 	}
+	function isNull(para)
+	{
+		if(para.value=="")
+			alert("the value of "+para.name+" is empty!");
+	}
 </script>
 <body style="text-align: center">
 <table width="100%" border="0">
@@ -56,7 +61,9 @@
               <tbody>
                 <tr>
                   <th width="45%" height="19" align="right" valign="middle" bgcolor="#A1A6A3" scope="col"><label for="textfield">Term:&nbsp;</label>
-                    <input type="text" name="textfield" id="textfield">
+                    <input type="text" name="textfield" id="textfield" value="Nayana" onSelect="alert('yo slede');">
+					  <input type="text" name="username" onfocus="Select text(this);">
+					  <input type="text" name="username" id="id_username" onfocus="Select text(this);" onBlur="isNull(this);">
                     <input type="button" name="button" id="button" value="Add" onClick="pmt();"></th>
 </tr>
               </tbody>
