--- a/Static/CoursePage.html
+++ b/Static/CoursePage.html
@@ -4,6 +4,53 @@
 <meta charset="utf-8">
 <title>CoursePage</title>
 </head>
+	<script language="javascript">
+	function edit(i)
+		{
+			document.getElementById("lblCourse".concat(i)).style.display='none';
+			document.getElementById("txtCourse".concat(i)).style.display='';
+			document.getElementById("lblStartDate".concat(i)).style.display='none';
+			document.getElementById("txtStartDate".concat(i)).style.display='';
+			document.getElementById("lblEndDate".concat(i)).style.display='none';
+			document.getElementById("txtEndDate".concat(i)).style.display='';
+			document.getElementById("btnUpdate".concat(i)).style.display='';
+			document.getElementById("btnEdit".concat(i)).style.display='none';
+			document.getElementById("btnDelete".concat(i)).style.display='none';
+		}
+	function update(i)
+		{
+			document.getElementById("lblCourse".concat(i)).style.display='';
+			document.getElementById("txtCourse".concat(i)).style.display='none';
+			document.getElementById("lblStartDate".concat(i)).style.display='';
+			document.getElementById("txtStartDate".concat(i)).style.display='none';
+			document.getElementById("lblEndDate".concat(i)).style.display='';
+			document.getElementById("txtEndDate".concat(i)).style.display='none';
+			document.getElementById("btnUpdate".concat(i)).style.display='none';
+			document.getElementById("btnEdit".concat(i)).style.display='';
+			document.getElementById("btnDelete".concat(i)).style.display='';
+			document.getElementById("lblCourse".concat(i)).innerHTML=document.getElementById("txtCourse".concat(i)).value;
+			document.getElementById("lblStartDate".concat(i)).innerHTML=document.getElementById("txtStartDate".concat(i)).value;
+			document.getElementById("lblEndDate".concat(i)).innerHTML=document.getElementById("txtEndDate".concat(i)).value;
+		}	
+	function delcon(i)
+	{
+		var con=confirm("Are you sure to delete the record? This action cannot be rolled back.Rownumber-".concat(i));
+		if(con==true)
+			{
+				alert("Record deleted");
+			}else
+				alert("Record not deleted")
+	}
+		function pmt()
+		{
+		var pmt=prompt("Please add a course id & name");
+		if(pmt==null || pmt=="")
+			{
+				alert("No course was added to the table");
+			}else
+				alert("The course ".concat(pmt).concat(" was added to the table"))
+		}
+</script>
 
 <body style="text-align: center">
 <table width="100%" border="0">
@@ -22,7 +69,7 @@
 <th width="45%" height="19" align="right" valign="middle" bgcolor="#A1A6A3" scope="col"><label for="textfield">Course:&nbsp;</label>
 
                     <input type="text" name="textfield" id="textfield">
-                    <input type="button" name="button" id="button" value="Add"></th>
+                    <input type="button" name="button" id="button" value="Quick Add" onClick="pmt();"></th>
 </tr>
               </tbody>
             </table></th>
@@ -35,21 +82,27 @@
             <td width="25%" height="21" align="center" bgcolor="#DEE0DF" >&nbsp;<strong>Management</strong>&nbsp;</td>
           </tr>
           <tr>
-            <td height="21" align="center">INFO 5717 - NetworkedDataModelingandProcessing</td>
-            <td align="center">&nbsp;</td>
-            <td align="center">&nbsp;</td>
-            <td height="21" align="center"><input type="button" name="button2" id="button2" value="Edit">
-              <input type="button" name="button3" id="button3" value="Delete"></td>
+                  <td align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblCourse1">INFO 5707 Data Modeling for Information Professionals</label>
+                    <input type="text" name="textfield" id="txtCourse1" style="display: none"></td>
+                  <td align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblStartDate1">01/01/2020</label>
+                    <input type="text" name="textfield" id="txtStartDate1" style="display: none"></td>
+                  <td height="21" align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblEndDate1">05/08/2020</label>
+                    <input type="text" name="textfield" id="txtEndDate1" style="display: none"></td>
+            	   <td height="21" align="center"><input type="button" name="button2" id="btnEdit1" value="Edit" onClick="edit(1);">
+					<input type="button" name="button4" id="btnUpdate1" value="Update" style="display: none" onClick="update(1);"> 
+                    <input type="button" name="button3" id="btnDelete1" value="Delete" onClick="delcon(1);"></td>
           </tr>
           <tr>
-            <td height="21" align="center">INFO 5707 - Data Modeling for Information Professionals</td>
-            <td align="center" >&nbsp;</td>
-            <td align="center" >&nbsp;</td>
-            <td height="21" align="center" ><input type="button" name="button2" id="button2" value="Edit">
-              <input type="button" name="button3" id="button3" value="Delete"></td>
+                  <td align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblCourse2">INFO 5717 Dynamic WWW Control Structures</label>
+                    <input type="text" name="textfield" id="txtCourse2" style="display: none"></td>
+                  <td align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblStartDate2">06/01/2020</label>
+                    <input type="text" name="textfield" id="txtStartDate2" style="display: none"></td>
+                  <td height="21" align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblEndDate2">08/23/2020</label>
+                    <input type="text" name="textfield" id="txtEndDate2" style="display: none"></td>
+            	   <td height="21" align="center"><input type="button" name="button2" id="btnEdit2" value="Edit" onClick="edit(2);">
+					<input type="button" name="button4" id="btnUpdate2" value="Update" style="display: none" onClick="update(2);"> 
+                    <input type="button" name="button3" id="btnDelete2" value="Delete" onClick="delcon(2);"></td>
           </tr>
-  
-        
         </tbody>
       </table></td>
       <td width="0" bgcolor="#06993C">&nbsp;</td>
