--- a/Static/MyAttendancePage.html
+++ b/Static/MyAttendancePage.html
@@ -4,7 +4,28 @@
 <meta charset="UTF-8">
 <title>MyAttendancePage</title>
 </head>
-
+<script language="javascript">	
+		var termObject = {
+			"Spring 2020":["INFO 5707 Data Modeling for Information Professionals","INFO 5810 Data Analysis and Knowledge Discovery"],
+			"Summer 2020":["INFO 5717 Dynamic WWW Control Structures","INFO 5305 System Analysis and Design"]
+		};
+	window.onload = function ()
+	{
+		var termSel = document.getElementById("termSel");
+		var	courseSel = document.getElementById("courseSel");
+		for (var term in termObject) {
+			termSel.options[termSel.options.length] = new Option(term, term);
+		}
+		termSel.onchange = function () {
+			courseSel.length = 1; // remove all options bar first
+			if (this.selectedIndex < 1) return; // done  
+			var courses = termObject[termSel.value];
+			for (var i = 0; i < courses.length; i++) {
+            	courseSel.options[courseSel.options.length] = new Option(courses[i], courses[i]);
+        	}	
+    	}
+	}
+	</script>
 <body>
 <table width="100%" border="0">
   <tbody>
@@ -16,17 +37,14 @@
       <td width="98%"><table width="100%" border="0" cellpadding="0">
         <tbody>
           <tr>
-            <th height="23" align="left" valign="middle" bgcolor="#ACB0AE" scope="col"><label for="Select Term">Select Term:</label>
-              <select name="Select Term" size="0" id="Select Term">
-                <option value="Summer 2020">Summer 2020</option>
-                <option value="Spring 2020">Spring 2020</option>
-              </select>
-              <label for="date"> </label>
-              <label for="select">Select Course:</label>
-              <select name="select" id="select">
-                <option value="INFO 5717">INFO 5717</option>
-                <option value="INFO 5707">INFO 5707</option>
-              </select>
+            <th height="23" align="left" valign="middle" bgcolor="#ACB0AE" scope="col"><label for="Term" >Term:</label>
+		      <select name="optone" id="termSel" size="1">
+        <option value="" selected="selected">Select term</option>
+    </select>
+		  <label for="course">Course:</label>
+    <select name="opttwo" id="courseSel" size="1">
+        <option value="" selected="selected">Please select course </option>
+    </select>	
               <label for="date"> Date:</label>
               <input type="date" name="date" id="date">
 			  <input type="submit" name="search" id="search" value="Search">
