--- a/Static/CoursePage.html
+++ b/Static/CoursePage.html
@@ -9,10 +9,6 @@
 		{
 			document.getElementById("lblCourse".concat(i)).style.display='none';
 			document.getElementById("txtCourse".concat(i)).style.display='';
-			document.getElementById("lblStartDate".concat(i)).style.display='none';
-			document.getElementById("txtStartDate".concat(i)).style.display='';
-			document.getElementById("lblEndDate".concat(i)).style.display='none';
-			document.getElementById("txtEndDate".concat(i)).style.display='';
 			document.getElementById("btnUpdate".concat(i)).style.display='';
 			document.getElementById("btnEdit".concat(i)).style.display='none';
 			document.getElementById("btnDelete".concat(i)).style.display='none';
@@ -21,16 +17,10 @@
 		{
 			document.getElementById("lblCourse".concat(i)).style.display='';
 			document.getElementById("txtCourse".concat(i)).style.display='none';
-			document.getElementById("lblStartDate".concat(i)).style.display='';
-			document.getElementById("txtStartDate".concat(i)).style.display='none';
-			document.getElementById("lblEndDate".concat(i)).style.display='';
-			document.getElementById("txtEndDate".concat(i)).style.display='none';
 			document.getElementById("btnUpdate".concat(i)).style.display='none';
 			document.getElementById("btnEdit".concat(i)).style.display='';
 			document.getElementById("btnDelete".concat(i)).style.display='';
 			document.getElementById("lblCourse".concat(i)).innerHTML=document.getElementById("txtCourse".concat(i)).value;
-			document.getElementById("lblStartDate".concat(i)).innerHTML=document.getElementById("txtStartDate".concat(i)).value;
-			document.getElementById("lblEndDate".concat(i)).innerHTML=document.getElementById("txtEndDate".concat(i)).value;
 		}	
 	function delcon(i)
 	{
@@ -63,7 +53,7 @@
       <td width="98%"><table width="100%" border="1" cellpadding="0" cellspacing="0">
         <tbody>
           <tr>
-            <th colspan="8" height="25" scope="col"><table width="100%" border="0" cellpadding="0">
+            <th colspan="6" height="25" scope="col"><table width="100%" border="0" cellpadding="0">
               <tbody>
                 <tr>
 <th width="45%" height="19" align="right" valign="middle" bgcolor="#A1A6A3" scope="col"><label for="textfield">Course:&nbsp;</label>
@@ -76,30 +66,20 @@
             </tr>
           
           <tr>
-			  <td width="33%" height="21" align="center" bgcolor="#DEE0DF">&nbsp;<strong>Course</strong>&nbsp;</td>
-			  <td width="22%" align="center" bgcolor="#DEE0DF" ><strong>Course Start Date</strong></td>
-			  <td width="20%" align="center" bgcolor="#DEE0DF" ><strong>Course End Date</strong></td>
-            <td width="25%" height="21" align="center" bgcolor="#DEE0DF" >&nbsp;<strong>Management</strong>&nbsp;</td>
+			  <td width="55%" height="21" align="center" bgcolor="#DEE0DF">&nbsp;<strong>Course</strong>&nbsp;</td>
+			  <td width="45%" height="21" align="center" bgcolor="#DEE0DF" >&nbsp;<strong>Management</strong>&nbsp;</td>
           </tr>
           <tr>
                   <td align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblCourse1">INFO 5707 Data Modeling for Information Professionals</label>
-                    <input type="text" name="textfield" id="txtCourse1" style="display: none"></td>
-                  <td align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblStartDate1">01/01/2020</label>
-                    <input type="text" name="textfield" id="txtStartDate1" style="display: none"></td>
-                  <td height="21" align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblEndDate1">05/08/2020</label>
-                    <input type="text" name="textfield" id="txtEndDate1" style="display: none"></td>
-            	   <td height="21" align="center"><input type="button" name="button2" id="btnEdit1" value="Edit" onClick="edit(1);">
+                    <input size="50" type="text" name="textfield" id="txtCourse1" style="display: none" value="INFO 5707 Data Modeling for Information Professionals"></td>
+                  <td height="21" align="center"><input type="button" name="button2" id="btnEdit1" value="Edit" onClick="edit(1);">
 					<input type="button" name="button4" id="btnUpdate1" value="Update" style="display: none" onClick="update(1);"> 
                     <input type="button" name="button3" id="btnDelete1" value="Delete" onClick="delcon(1);"></td>
           </tr>
           <tr>
                   <td align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblCourse2">INFO 5717 Dynamic WWW Control Structures</label>
-                    <input type="text" name="textfield" id="txtCourse2" style="display: none"></td>
-                  <td align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblStartDate2">06/01/2020</label>
-                    <input type="text" name="textfield" id="txtStartDate2" style="display: none"></td>
-                  <td height="21" align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblEndDate2">08/23/2020</label>
-                    <input type="text" name="textfield" id="txtEndDate2" style="display: none"></td>
-            	   <td height="21" align="center"><input type="button" name="button2" id="btnEdit2" value="Edit" onClick="edit(2);">
+                    <input size="50" type="text" name="textfield" id="txtCourse2" style="display: none" value="INFO 5717 Dynamic WWW Control Structures"></td>
+                  <td height="21" align="center"><input type="button" name="button2" id="btnEdit2" value="Edit" onClick="edit(2);">
 					<input type="button" name="button4" id="btnUpdate2" value="Update" style="display: none" onClick="update(2);"> 
                     <input type="button" name="button3" id="btnDelete2" value="Delete" onClick="delcon(2);"></td>
           </tr>
