--- a/Static/TermPage.html
+++ b/Static/TermPage.html
@@ -69,7 +69,7 @@
           </tr>
           <tr>
  				<td align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblTerm1">Spring 2020</label>
-                    <input type="text" name="textfield" id="txtTerm1" style="display: none"></td>
+                    <input size="30" type="text" name="textfield" id="txtTerm1" style="display: none" value="Spring 2020"></td>
             	<td height="21" align="center">
 					<input type="button" name="button2" id="btnEdit1" value="Edit" onClick="edit(1);">
 				 	<input type="button" name="button4" id="btnUpdate1" value="Update" style="display: none" onClick="update(1);"> 
@@ -77,7 +77,7 @@
           </tr>
           <tr>
  				<td align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblTerm2">Summer 2020</label>
-                    <input type="text" name="textfield" id="txtTerm2" style="display: none"></td>
+                    <input size="30" type="text" name="textfield" id="txtTerm2" style="display: none" value="Summer 2020"></td>
             	<td height="21" align="center">
 					<input type="button" name="button2" id="btnEdit2" value="Edit" onClick="edit(2);">
 				 	<input type="button" name="button4" id="btnUpdate2" value="Update" style="display: none" onClick="update(2);"> 
